--- a/assets/sass/_partial/_post/_footnote.scss
+++ b/assets/sass/_partial/_post/_footnote.scss
@@ -37,6 +37,7 @@
   bottom: 100%;
   border-radius: 0.5em;
   border: 1px solid rgba(0, 0, 0, 0.1);
+  box-sizing: border-box;
   background: #f6f6f6;
   opacity: 0;
   visibility: hidden;
